# weather-notifier-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  forecast.py  main.py  pyproject.toml  requirements.txt
bot/: emoji.py  settings.py
bot/api/: mongo.py  openweather.py
func/: config.py  emoji.py  forecast.py  mongo_users.py  weather.py
